[package]
name = "near-cw-escrow"
version = "0.1.0"
authors = ["Vadim Ilin <vadim@near.org", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=4.0.0-pre.8"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true